# simple_agent

./: .gitignore  README.md  folder_structure.md  gaussian_fit.py  gaussian_fit_mle.py  introduction.md  my_note.ipynb  output.md  project.md  pyproject.toml  test.ipynb
configs/: agent.yaml  model.yaml  policy.yaml
docs/: CLAUDE_PLAN.md  Tutorial.md
docs/claude/: CONTEXT_MEMORY_PHASE1_PLAN.md  CONTEXT_MEMORY_RECONSTRUCT.md  HOOK_BASED_APPROVAL_PLAN.md  NEXT_STAGE_UPGRADE_PLAN.md  PLAN_AND_PROMPT_REFACTOR.md  PLAN_AND_PROMPT_REFACTOR_V2.md  PROMPT_MINIMAL_REFACTOR_PLAN.md  QUERY_KERNEL_STATE_MACHINE_PLAN.md  SERVICE_RUNTIME_PLAN.md  TOOL_UPDATE.md
simple_agent/: TOOLS_INTRODUCTION.md  agent.py  app.py  config.py  executor.py  memory.py  parser.py  planner.py  policy.py  schemas.py  state.py
simple_agent/approval/: approval_service.py  approval_store.py  cli_approval_adapter.py
simple_agent/context/: artifact_state.py  compactor.py  context_layers.py  context_service.py
simple_agent/engine/: dispatcher.py  parser.py  planner.py  prompt_service.py  query_engine.py  query_loop.py  query_state.py  transitions.py  verifier.py
simple_agent/hooks/: hook_manager.py  pre_tool_use.py
simple_agent/llm/: base.py  llm_service.py  zhipu_client.py
simple_agent/memory/: compact_service.py  (+2 more)
tests/: test_agent.py  test_compact_service.py  test_context_layers.py  test_context_memory_integration.py  test_context_service.py  test_memory.py  test_memory_v2.py  test_parser.py  test_planner.py  test_policy.py  test_prompt_memory_cleanup.py  test_task_scheduler.py  test_tools.py
(+56 files in other folders)
